--- a/lib/learn_phoenix_web/controllers/hello_html/index.html.heex
+++ b/lib/learn_phoenix_web/controllers/hello_html/index.html.heex
@@ -1,5 +1,8 @@
 <section>
   <h2>Hello World, from Phoenix!</h2>
-  <.link href={~p"/hello/panchi?locale=es"}>Go to Panchi's greeting</.link><br>
+  <.link href={~p"/hello/panchi?locale=es"}>Go to Panchi's greeting</.link>
+  <br>
   <.link href={url(~p"/hello/caro?locale=es")}>This is a Path to Caro's greeting <br><%=url(~p"/hello/caro?locale=es")%></.link>
+  <br>
+  <.link href={~p"/home/?_format=json"}>Go to Sam's JSON greeting</.link>
 </section>
