Done with Components

--- a/lib/learn_phoenix_web/controllers/hello_html/show.html.heex
+++ b/lib/learn_phoenix_web/controllers/hello_html/show.html.heex
@@ -1,4 +1,6 @@
 <section>
   <h2>Hello World, from <%= @messenger %>!</h2>
   <h3>Received by: <%= @receiver %></h3>
+
+  <.greet messenger={ @messenger } />
 </section>
